# W5_JobAlertBot

./: .env.example  .gitignore  .tmp-docker-compose.yml  .tmp-jobs.conf  AGENTS.md  CLAUDE.md  NEW_SOURCES.md  PRODUCT.md  README.md  cv.md  deploy.sh  ecosystem.config.cjs  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.claude/agents/: w5-dashboard-reviewer.md  w5-gotcha-checker.md  w5-route-tracer.md  w5-schema-coordinator.md  w5-source-tracer.md
.cursor/rules/: job-alert-bot.mdc
data/: profile.json  searches.json
deploy/: job-alert-bot.service  nginx-job-dashboard.conf
job-match/: README.md  candidate_profile.yaml  pyproject.toml
job-match/src/: cli.py  config.py  matcher.py  models.py  parser.py  scraper.py  utils.py
scripts/: backfill-extractors.js  send-pending.js  verify-new-sources.mjs
src/: config.js  dashboard.js  db.js  discord.js  index.js  jobs-schema.js  notify-pending.js
src/dashboard/: aggregate.js  auth.js  bot-process.js  data-access.js  server.js
src/sources/: advancetrs.js  adzuna.js  bimplus.js  careerjet.js  ciob.js  construction_enquirer.js  cvlibrary.js  cwjobs.js  glassdoor.js  guardian.js  hays.js  icerecruit.js  jobserve.js  jooble.js  linkedin.js  matchtech.js  michaelpage.js  monster.js  morson.js  next_data_extract.js  reed.js  risetechnical.js  serper.js  stepstone_platform.js  technojobs.js  totaljobs.js
src/utils/: browser.js  enrich.js  (+13 more)
test/: countries.test.js  db.test.js  extractors.test.js  llm.test.js  profileFit.test.js  rag.test.js  salary.test.js  search.test.js  sources.test.js
(+11 files in other folders)
