[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-match"
version = "0.1.0"
description = "CLI tool to score job listings against a candidate profile using Claude"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "typer[all]>=0.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45.0"]

[project.scripts]
job-match = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
